<package>
  <name>vrep_plugin_velodyne</name>
  <description>V-REP plugin Velodyne</description>
  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <version>0.0.1</version>
  <author>TODO</author>
  <license>TODO</license>
  <url>TODO</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roslib</run_depend>
</package>


